tests/rosetta/out/Haskell/99-bottles-of-beer-2.error
run error: exit status 1

/workspace/mochi/tests/rosetta/out/Haskell/99-bottles-of-beer-2.hs:145:1: error:
    Multiple declarations of ‘main’
    Declared at: /workspace/mochi/tests/rosetta/out/Haskell/99-bottles-of-beer-2.hs:140:1
                 /workspace/mochi/tests/rosetta/out/Haskell/99-bottles-of-beer-2.hs:145:1
    |
145 | main = do
    | ^^^^
